# CS2610FinalProject

./: README.md  SoftwareDevelopmentPlan.md  pyproject.toml
_server/core/: models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_collectioncard_date_added_wantedcard_date_added.py  0003_alter_mycard_power.py  0004_alter_mycard_loyalty_alter_mycard_toughness.py
_server/core/templates/core/: home.html  index.html
_server/registration/: views.py
_server/registration/migrations/: 0001_initial.py  0002_remove_wantedcard_card_remove_collectioncard_card_and_more.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: package-lock.json  package.json
client/src/: index.css  main.jsx
client/src/components/: CardFilterBar.jsx  DeckCard.jsx  Error.jsx  Header.jsx  Input.jsx
client/src/hooks/: alert.jsx  useDoubleClick.jsx  useLogout.jsx  useRequest.jsx  useSampleCollection.jsx  useSampleDecks.jsx  useSampleWanted.jsx  useSingleClick.jsx
client/src/pages/: Card.jsx  Collection.jsx  CreateDeck.jsx  Dashboard.jsx  Deck.jsx  Decks.jsx  Layout.jsx  Search.jsx  Wanted.jsx
