[tool.poetry]
name = "MTG-Card-And-Deck-Database"
version = "0.1.0"
description = ""
authors = ["Joseph Ditton <jditton.atomic@gmail.com>", "Carter Green <carter.ryan.green@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
mtgsdk = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
